=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.x CA
 - Changed: More tidying up of GED_Fact module. (windmillway)
 - Merged: Merge changes r5423 - r5467 from the trunk. (windmillway)
 - Changed: Tidied up naming conventions for GED_Fact module (windmillway)
 - Added: MEDIA Add/Remove Links GUI functions (Not finished yet) (windmillway)
 - Merged: Merge changes r5367 - r5422 from the trunk. (windmillway)
 - Merged: Merge changes r5331 - r5366 from the trunk. (windmillway)
 - Merged: Merge changes r5324 - r5330 from the trunk. (4.2.1 Release level) (windmillway)
 - Fixed: Undefined Variable ERROR in logfiles (windmillway)
 - ROLL-BACK: Merged changes r5324 - r5351 from the trunk. (catastrophic errors) (windmillway)
 - Merged: Merge changes r5324 - r5351 from the trunk. (windmillway)
 - Added: List of linked indis for edit CENSUS page (Not finished yet) (windmillway)
 - Merged: Merge changes r5275 - r5323 from the trunk. (windmillway)
 - Changed: Tidied up a few more Navigator married names (Still Step Families to do)(windmillway)
 - Merged: Merge changes r5245 - r5274 from the trunk. (windmillway)
 - Changed: Fixed wrong path for "Find" function. Tidied up a few Navigator married names (windmillway)
 - Merged: Merge changes r5235 - r5244 from the trunk. (windmillway)
 - Changed: Paths to files in new GEDFact_assistant/CENS/ directory <windmillway)
 - Added: New subdirectories to GEDFact_assistant module {windmillway)
 - Changed: Renamed census_assistant module to GEDFact_assistant module (windmillway)
 - Changed: Added condition to only allow Shared note "assisted" icon when Census assistant module is present (windmillway)
 - Merged: Merge changes r5225 - r5234 from the trunk. (windmillway)