@@ -10,6 +10,7 @@
 
 
 Version 4.2.x CA
+ - Changed: Correct Paste-back links for Media add links (after svn 5424 autocomplete change)
  - Changed: More tidying up of GED_Fact module. (windmillway)
  - Merged: Merge changes r5423 - r5467 from the trunk. (windmillway)
  - Changed: Tidied up naming conventions for GED_Fact module (windmillway)
